--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 	<link rel="stylesheet" href="css/bootstrap.css" />
 	<link rel="stylesheet" href="css/conejo.css" />
 	<link rel="stylesheet" href="css/inlineDisqussions.css" />
+	<link href='http://fonts.googleapis.com/css?family=Oxygen+Mono' rel='stylesheet' type='text/css'>
 
 	<script src="https://cdn.firebase.com/js/client/1.0.18/firebase.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src="js/ace.js"></script>
 	<script src="js/firepad-min.js"></script>
 	<script src="js/mode-space.js"></script>
@@ -45,40 +46,47 @@
 		.ace_editor {
 		    position: relative;
 		    overflow: hidden;
-		    font-family: 'Ubuntu Mono', 'Menlo', 'Monaco', 'Consolas', 'source-code-pro', monospace;
-		    font-size: 18px;
+		    font-size: 14px;
 		    color: black;
-		    line-height: normal;
+		    line-height: 1.3;
 		    direction: ltr;
+		}
+
+		.ace_constant { 
+    		pointer-events: auto; 
+		} 
+		.ace_constant:hover { 
+		    outline:solid 1px 
+		} 
+		.ace_line_group:hover {
+			font-size:12px;
 		}
 
 		.ace_fold {
 			display: none !important;
 		}
+
+		.infoSection {
+			position: fixed;
+		}
+
 	</style>
 </head>
 <body>
 		<div class="row">
-			<div class="col-xs-12">
-				<div id="top-content">
-					<a href="./" id="create-pad" class="sprite-btn"></a>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-xs-2">
+			<div class="col-lg-3">
 				<div id="title">
 					<h2 style="text-align: center;">Co-Pilot</h2>
 				</div>
 				<div class="well">
+					<div class="charlie">har</div>
 					<p>Organize, brainstorm and share ideas with anyone: coworkers, classmates, friends, or strangers.</p>
 					<p>Everything's <b>live</b>, so collaboration is in real-time.</p>
 					<p>And it's all <a href="#" class="link" data-placement="bottom" data-original-title="Try clicking the arrows next to the text to see what I mean">in outline form</a>, which'll make organizing fast for everyone.</p>
 
 				</div>
 			</div>
-			<div class="col-xs-10">
-				<div id="userList"></div>
+			<div class="col-lg-9">
 				<div id="firepad"></div>
 			</div>
 		</div>
@@ -93,15 +101,33 @@
 		editor.getSession().setMode("ace/mode/space");
 		editor.getSession().setUseWrapMode(true);
 		editor.getSession().setWrapLimitRange(60, 60);
+		
+
 		var firepad = Firepad.fromACE(firepadRef, editor,
 		{});
 
+		editor.on('mousemove', function(e) {
+			var position = e.getDocumentPosition();
+			var currentRow = position.row;
+			console.log(currentRow);
+			// var node = editor.createElement('div');
+			// var textnode = editor.createTextNode("Water"); 
+			// node.appendChild(textnode);
+			// document.getElementById("myList").appendChild(node);
+
+   //     		console.log(currentRow);
+   //     		document.body.appendChild(node);
+       	});
+
 	</script>
 	<script>
-		var paragraphs = $('.ace_layer.ace_text-layer .ace_line_group');
-	  $(paragraphs).mouseover(function() {
-	  	$(console.log('got it'));
-		});
+		$(function() {
+			var paragraphs = $('.ace_content');
+			var inner = $('div.ace_text-layer');
+	  		// $('.firepad').on('mouseover', '.ace_content', function (event) {
+	  		// 	console.log('yarr');
+	  		// });
+	  	});
 	</script>
 </body>
 </html>
