--- a/index.html
+++ b/index.html
@@ -1,133 +1,150 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-	<title>Co-Pilot</title>
+  <head>
+    <meta charset='utf-8' />
 
-	<link rel="stylesheet" href="css/firepad.css" />
-	<link rel="stylesheet" href="css/editor.css" />
-	<link rel="stylesheet" href="css/bootstrap.css" />
-	<link rel="stylesheet" href="css/conejo.css" />
-	<link rel="stylesheet" href="css/inlineDisqussions.css" />
-	<link href='http://fonts.googleapis.com/css?family=Oxygen+Mono' rel='stylesheet' type='text/css'>
+    <!-- jQuery -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js'></script>
 
-	<script src="https://cdn.firebase.com/js/client/1.0.18/firebase.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-	<script src="js/ace.js"></script>
-	<script src="js/firepad-min.js"></script>
-	<script src="js/mode-space.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/inlineDisqussions.js"></script>
-	<style>
-		html { 
-			height: 100%; 
-			width: 100%;
-		}
+    <!-- Firebase -->
+    <script src='https://cdn.firebase.com/js/client/2.0.2/firebase.js'></script>
 
-		body { 
-			margin: 0; 
-			height: 100%; 
-			background-color: #CFCFB8;
-		}
-		    
-		#firepad {
-			position: fixed;
-			height: 80%;
-			width: 60%;
-			padding-top: 50px;
-			padding-bottom: 100px;
-			margin-top: 100px;
-			margin-bottom: 100px;
-		}
+    <!-- Firechat -->
+    <link rel='stylesheet' href='https://cdn.firebase.com/libs/firechat/2.0.1/firechat.min.css' />
+    <script src='https://cdn.firebase.com/libs/firechat/2.0.1/firechat.min.js'></script>
 
-		.ace_print-margin {
-			display: none;
-		}
+    <link rel="stylesheet" href="https://cdn.firebase.com/libs/firepad/1.3.0/firepad.css" />
+  <script src="https://cdn.firebase.com/libs/firepad/1.3.0/firepad.min.js"></script>
 
-		.ace_editor {
-		    position: relative;
-		    overflow: hidden;
-		    font-size: 14px;
-		    color: black;
-		    line-height: 1.3;
-		    direction: ltr;
-		}
-
-		.ace_constant { 
-    		pointer-events: auto; 
-		} 
-		.ace_constant:hover { 
-		    outline:solid 1px 
-		} 
-		.ace_line_group:hover {
-			font-size:12px;
-		}
-
-		.ace_fold {
-			display: none !important;
-		}
-
-		.infoSection {
-			position: fixed;
-		}
-
-	</style>
+  <style>
+    html { height: 100%; }
+    body { margin: 0; height: 100%; position: relative; }
+      /* Height / width / positioning can be customized for your use case.
+         For demo purposes, we make firepad fill the entire browser. */
+    #firepad-container {
+      width: 100%;
+      height: 100%;
+    }
+  </style>
 </head>
+
 <body>
-		<div class="row">
-			<div class="col-lg-3">
-				<div id="title">
-					<h2 style="text-align: center;">Co-Pilot</h2>
-				</div>
-				<div class="well">
-					<div class="charlie">har</div>
-					<p>Organize, brainstorm and share ideas with anyone: coworkers, classmates, friends, or strangers.</p>
-					<p>Everything's <b>live</b>, so collaboration is in real-time.</p>
-					<p>And it's all <a href="#" class="link" data-placement="bottom" data-original-title="Try clicking the arrows next to the text to see what I mean">in outline form</a>, which'll make organizing fast for everyone.</p>
+  <div id="firepad-container"></div>
+    <script type='text/javascript'>
+      // Create a new Firebase reference, and a new instance of the Login client
+      var chatRef = new Firebase('https://co-pilot.firebaseio.com');
+      chatRef.onAuth(function(authData) {
+        // Once authenticated, instantiate Firechat with our user id and user name
+        if (authData) {
+          var chat = new FirechatUI(chatRef, document.getElementById('firechat-wrapper'));
+          chat.setUser(authData.uid, authData[authData.provider].displayName);
+        }
+      });
+      function login(provider) {
+        chatRef.authWithOAuthPopup(provider, function(error, authData) {
+          if (error) {
+            console.log(error);
+          }
+        });
+      }
 
-				</div>
-			</div>
-			<div class="col-lg-9">
-				<div id="firepad"></div>
-			</div>
-		</div>
-	<script>
-		$('.link').tooltip()
-	</script>
-	<script>
-		var firepadRef = new Firebase('http://amber-fire-3122.firebaseIO.com');
-
-		var editor = ace.edit('firepad');
-		editor.setTheme("ace/theme/textmate");
-		editor.getSession().setMode("ace/mode/space");
-		editor.getSession().setUseWrapMode(true);
-		editor.getSession().setWrapLimitRange(60, 60);
-		
-
-		var firepad = Firepad.fromACE(firepadRef, editor,
-		{});
-
-		editor.on('mousemove', function(e) {
-			var position = e.getDocumentPosition();
-			var currentRow = position.row;
-			console.log(currentRow);
-			// var node = editor.createElement('div');
-			// var textnode = editor.createTextNode("Water"); 
-			// node.appendChild(textnode);
-			// document.getElementById("myList").appendChild(node);
-
-   //     		console.log(currentRow);
-   //     		document.body.appendChild(node);
-       	});
-
-	</script>
-	<script>
-		$(function() {
-			var paragraphs = $('.ace_content');
-			var inner = $('div.ace_text-layer');
-	  		// $('.firepad').on('mouseover', '.ace_content', function (event) {
-	  		// 	console.log('yarr');
-	  		// });
-	  	});
-	</script>
-</body>
+      function init() {
+      //// Initialize Firebase.
+      var firepadRef = getExampleRef();
+      // TODO: Replace above line with:
+      // var firepadRef = new Firebase('<YOUR FIREBASE URL>');
+      //// Create CodeMirror (with lineWrapping on).
+      var codeMirror = CodeMirror(document.getElementById('firepad-container'), { lineWrapping: true });
+      //// Create Firepad (with rich text toolbar and shortcuts enabled).
+      var firepad = Firepad.fromCodeMirror(firepadRef, codeMirror,
+          { richTextToolbar: true, richTextShortcuts: true });
+      //// Initialize contents.
+      firepad.on('ready', function() {
+        if (firepad.isHistoryEmpty()) {
+          firepad.setHtml(
+              '<span style="font-size: 24px;">Rich-text editing with <span style="color: red">Firepad!</span></span><br/>\n' +
+              '<br/>' +
+              '<div style="font-size: 18px">' +
+              'Supports:<br/>' +
+              '<ul>' +
+                '<li>Different ' +
+                  '<span style="font-family: impact">fonts,</span>' +
+                  '<span style="font-size: 24px;"> sizes, </span>' +
+                  '<span style="color: blue">and colors.</span>' +
+                '</li>' +
+                '<li>' +
+                  '<b>Bold, </b>' +
+                  '<i>italic, </i>' +
+                  '<u>and underline.</u>' +
+                '</li>' +
+                '<li>Lists' +
+                  '<ol>' +
+                    '<li>One</li>' +
+                    '<li>Two</li>' +
+                  '</ol>' +
+                '</li>' +
+                '<li>Undo / redo</li>' +
+                '<li>Cursor / selection synchronization.</li>' +
+                '<li><checkbox></checkbox> It supports customized entities.</li>' +
+                '<li>And it\'s all fully collaborative!</li>' +
+              '</ul>' +
+              '</div>');
+        }
+      });
+      // An example of a complex custom entity.
+      firepad.registerEntity('checkbox', {
+        render: function (info, entityHandler) {
+          var inputElement = document.createElement('input');
+          inputElement.setAttribute('type', 'checkbox');
+          if(info.checked) {
+            inputElement.checked = 'checked';
+          }
+          inputElement.addEventListener('click', function () {
+            entityHandler.replace({checked:this.checked});
+          });
+          return inputElement;
+        }.bind(this),
+        fromElement: function (element) {
+          var info = {};
+          if(element.hasAttribute('checked')) {
+            info.checked = true;
+          }
+          return info;
+        },
+        update: function (info, element) {
+          if (info.checked) {
+            element.checked = 'checked';
+          } else {
+            element.checked = null;
+          }
+        },
+        export: function (info) {
+          var inputElement = document.createElement('checkbox');
+          if(info.checked) {
+            inputElement.setAttribute('checked', true);
+          }
+          return inputElement;
+        }
+      });
+    }
+    // Helper to get hash from end of URL or generate a random one.
+    function getExampleRef() {
+      var ref = new Firebase('https://co-pilot.firebaseio.com');
+      var hash = window.location.hash.replace(/#/g, '');
+      if (hash) {
+        ref = ref.child(hash);
+      } else {
+        ref = ref.push(); // generate unique location.
+        window.location = window.location + '#' + ref.key(); // add it as a hash to the URL.
+      }
+      if (typeof console !== 'undefined')
+        console.log('Firebase data: ', ref.toString());
+      return ref;
+    }
+    init();
+    </script>
+    <div id='firechat-wrapper'>
+      <a href='#' onclick='login("twitter");'>Login</a>
+    </div>
+  </body>
 </html>
