--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       // TODO: Replace above line with:
       // var firepadRef = new Firebase('<YOUR FIREBASE URL>');
       //// Create CodeMirror (with lineWrapping on).
-      var codeMirror = CodeMirror(document.getElementById('firepad-container'), { lineWrapping: true });
+      // var codeMirror = CodeMirror(document.getElementById('firepad-container'), { lineWrapping: true });
       //// Create Firepad (with rich text toolbar and shortcuts enabled).
       var firepad = Firepad.fromCodeMirror(firepadRef, codeMirror,
           { richTextToolbar: true, richTextShortcuts: true });
