--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
     <link rel='stylesheet' href='https://cdn.firebase.com/libs/firechat/2.0.1/firechat.min.css' />
     <script src='https://cdn.firebase.com/libs/firechat/2.0.1/firechat.min.js'></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.10.0/codemirror.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.10.0/codemirror.css" />
+
+
     <link rel="stylesheet" href="https://cdn.firebase.com/libs/firepad/1.3.0/firepad.css" />
-  <script src="https://cdn.firebase.com/libs/firepad/1.3.0/firepad.min.js"></script>
+    <script src="https://cdn.firebase.com/libs/firepad/1.3.0/firepad.min.js"></script>
 
   <style>
     html { height: 100%; }
@@ -54,7 +58,7 @@
       // TODO: Replace above line with:
       // var firepadRef = new Firebase('<YOUR FIREBASE URL>');
       //// Create CodeMirror (with lineWrapping on).
-      // var codeMirror = CodeMirror(document.getElementById('firepad-container'), { lineWrapping: true });
+      var codeMirror = CodeMirror(document.getElementById('firepad-container'), { lineWrapping: true });
       //// Create Firepad (with rich text toolbar and shortcuts enabled).
       var firepad = Firepad.fromCodeMirror(firepadRef, codeMirror,
           { richTextToolbar: true, richTextShortcuts: true });
