--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
   <div id="firepad-container"></div>
     <script type='text/javascript'>
       // Create a new Firebase reference, and a new instance of the Login client
-      var chatRef = new Firebase('https://co-pilot.firebaseio.com');
+      var chatRef = new Firebase('https://co-pilot.firebaseio.com/chat');
       chatRef.onAuth(function(authData) {
-      //   // Once authenticated, instantiate Firechat with our user id and user name
+      // Once authenticated, instantiate Firechat with our user id and user name
         if (authData) {
           var chat = new FirechatUI(chatRef, document.getElementById('firechat-wrapper'));
           chat.setUser(authData.uid, authData[authData.provider].displayName);
