--- a/index.html
+++ b/index.html
@@ -49,35 +49,39 @@
       //// Initialize contents.
       firepad.on('ready', function() {
         if (firepad.isHistoryEmpty()) {
-          firepad.setHtml(
-              '<span style="font-size: 24px;">Rich-text editing with <span style="color: red">Firepad!</span></span><br/>\n' +
-              '<br/>' +
-              '<div style="font-size: 18px">' +
-              'Supports:<br/>' +
-              '<ul>' +
-                '<li>Different ' +
-                  '<span style="font-family: impact">fonts,</span>' +
-                  '<span style="font-size: 24px;"> sizes, </span>' +
-                  '<span style="color: blue">and colors.</span>' +
-                '</li>' +
-                '<li>' +
-                  '<b>Bold, </b>' +
-                  '<i>italic, </i>' +
-                  '<u>and underline.</u>' +
-                '</li>' +
-                '<li>Lists' +
-                  '<ol>' +
-                    '<li>One</li>' +
-                    '<li>Two</li>' +
-                  '</ol>' +
-                '</li>' +
-                '<li>Undo / redo</li>' +
-                '<li>Cursor / selection synchronization.</li>' +
-                '<li><checkbox></checkbox> It supports customized entities.</li>' +
-                '<li>And it\'s all fully collaborative!</li>' +
-              '</ul>' +
-              '</div>');
-        }
+          // firepad.setHtml(
+          //     '<span style="font-size: 24px;">Rich-text editing with <span style="color: red">Firepad!</span></span><br/>\n' +
+          //     '<br/>' +
+          //     '<div style="font-size: 18px">' +
+          //     'Supports:<br/>' +
+          //     '<ul>' +
+          //       '<li>Different ' +
+          //         '<span style="font-family: impact">fonts,</span>' +
+          //         '<span style="font-size: 24px;"> sizes, </span>' +
+          //         '<span style="color: blue">and colors.</span>' +
+          //       '</li>' +
+          //       '<li>' +
+          //         '<b>Bold, </b>' +
+          //         '<i>italic, </i>' +
+          //         '<u>and underline.</u>' +
+          //       '</li>' +
+          //       '<li>Lists' +
+          //         '<ol>' +
+          //           '<li>One</li>' +
+          //           '<li>Two</li>' +
+          //         '</ol>' +
+          //       '</li>' +
+          //       '<li>Undo / redo</li>' +
+          //       '<li>Cursor / selection synchronization.</li>' +
+          //       '<li><checkbox></checkbox> It supports customized entities.</li>' +
+          //       '<li>And it\'s all fully collaborative!</li>' +
+          //     '</ul>' +
+          //     '</div>');
+          firepad.setText('yo');
+         
+      }
+                   console.log($('pre.CodeMirror-line').innerText());
+
       });
       // An example of a complex custom entity.
       firepad.registerEntity('checkbox', {
@@ -113,11 +117,10 @@
           }
           return inputElement;
         }
-        if ($('pre#CodeMirror-line > span span').innerHTML() == $('#')) {
-          $(this).addClass('.firepad-u');
-        };
+        
       });
     }
+    // console.log(document.getElementByClassName('CodeMirror-line').children('span span').text);
     // Helper to get hash from end of URL or generate a random one.
     function getExampleRef() {
       var ref = new Firebase('https://co-pilot.firebaseio.com');
